lowered minimap by 20px, no longer covers buttons

--- a/source/less/map/leaflet/VCO.Leaflet.MiniMap.less
+++ b/source/less/map/leaflet/VCO.Leaflet.MiniMap.less
@@ -9,7 +9,7 @@
 		.leaflet-top {
 			.leaflet-control-minimap {
 				margin-left:10px;
-				margin-top:10px;
+				margin-top:33px;
 			}
 		}
 		.leaflet-control-minimap {
